# Eraser

./: README.md  meson.build  org.gnome.Example.json
src/: eraser.in  main.py  meson.build
src/color/: eraser.txt  logo.txt  tutorial-en.txt  tutorial-id.txt  warna.py
